<?php

namespace App\Domain\Shared;

enum Role
{
    case Admin;
    case Customer;
}
